<resources>
    <string name="app_name">UsageTime</string>

    <string name="common_error">Ошибка</string>

    <string name="exception_error_usage_for_period">Не удалось получить статистику за период.</string>
    <string name="exception_error_usage_for_app_period">Не удалось получить статистику приложения за период.</string>
    <string name="exception_error_active_usage_for_app_day">Не удалось получить статистику активности приложения за день.</string>
    <string name="exception_unknown_error">Неизвестная ошибка: %s</string>

    <!--String Array-->
    <string-array name="days">
        <item>ПН</item>
        <item>ВТ</item>
        <item>СР</item>
        <item>ЧТ</item>
        <item>ПТ</item>
        <item>СБ</item>
        <item>ВС</item>
    </string-array>

    <string name="time_hours_minutes">%1$d ч %2$d мин</string>
    <string name="time_minutes">%1$d мин</string>
    <string name="time_less_than_minute">менее минуты</string>
    <string name="time_zero">0</string>

    <!--SplashFragment-->
    <string name="splash_fragment_title">Опять в Рилсах просидел?</string>

    <!--Agreement BottomSheet Fragment-->
    <string name="agreement_bottom_sheet_fragment_navigate_to_setting">Перейти в настройки</string>
    <string name="agreement_bottom_sheet_fragment_title">Для работы приложения требуется разрешение</string>
    <string name="agreement_bottom_sheet_fragment_description">Чтобы отслеживать статистику использования приложений, пожалуйста, разрешите приложению доступ к информации об использовании других приложений.Это необходимо для корректной работы всех функций приложения. Ваши данные будут использоваться только для формирования вашей личной статистики.</string>

    <!--Agreement Fragment-->
    <string name="agreement_fragment_toolbar_title">Добро пожаловать</string>
    <string name="agreement_fragment_title">Узнайте, куда уходит ваше время</string>
    <string name="agreement_fragment_start_button_text">Стартуем</string>

    <!--Main Fragment-->
    <string name="main_fragment_title_loading">Получение данных…</string>
    <string name="main_fragment_title_done">Что там по времени?</string>
    <string name="main_fragment_chart_item_counter_history_hours_unit">%1$.1f ч</string>
    <string name="main_fragment_file_name_date_from_to_format">от %1$s до %2$s.json</string>
</resources>